# SampleChain

./: .gitignore  CLAUDE.md  README.md  SampleChain.py  demo.py  pyproject.toml  requirements.txt
samplechain/: __init__.py  block.py  blockchain.py  cli.py  legacy.py  miner.py  transaction.py
tests/: conftest.py  test_block.py  test_blockchain.py  test_integration.py  test_miner.py  test_transaction.py
